# aigate

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  STRESS_TEST_REPORT.md  pyproject.toml
src/aigate/: __init__.py  cert.py  cli.py  config.py  logger.py  mcp_server.py  proxy.py  redactor.py  scanner.py
src/aigate/hooks/: __init__.py  scan_output.sh  scan_prompt.sh  scan_tool.sh
tests/: test_e2e.py  test_mcp_server.py  test_proxy.py  test_redactor.py  test_scan_dir.py  test_scanner.py  test_stress.py
