[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigate"
version = "0.2.2"
description = "AI Prompt Secret Scanner — local proxy that blocks secrets before they reach AI APIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Jose Ramos"},
]
keywords = ["security", "secrets", "ai", "proxy", "scanner", "cli", "dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "mitmproxy>=10.0",
]

[project.urls]
Homepage = "https://github.com/joseramos/aigate"
Repository = "https://github.com/joseramos/aigate"
Issues = "https://github.com/joseramos/aigate/issues"

[project.scripts]
aigate = "aigate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aigate.hooks" = ["*.sh"]
